# rktk

./: .gitignore  .neoconf.json  AGENTS.md  Cargo.toml  LICENSE  Makefile.toml  README.md  ]  biome.json  crates_config.json  crates_config.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rktk.dev.json  rust-toolchain.toml
crates/kmsm/: Cargo.toml  README.md
crates/kmsm-rktk/: Cargo.toml
crates/kmsm-rktk/src/: lib.rs
crates/kmsm/src/: keymap.rs  lib.rs  macros.rs  time.rs
crates/kmsm/src/interface/: state.rs
crates/kmsm/src/keycode/: mod.rs  special.rs  utils.rs
crates/kmsm/src/state/: hid_report.rs  mod.rs  shared.rs
crates/ra-check/: Cargo.toml
crates/ra-check/src/: main.rs
crates/rktk/: Cargo.toml  schema.json
crates/rktk-client/: Cargo.toml  input.css  package.json
crates/rktk-client/src/: main.rs  utils.rs
crates/rktk-client/src/app/: cache.rs  disconnect.rs  mod.rs  state.rs
crates/rktk-client/src/backend/: mod.rs  native.rs  web.rs
crates/rktk-defmt-print/: Cargo.toml  README.md
crates/rktk-defmt-print/src/: main.rs
crates/rktk-drivers-common/: Cargo.toml  README.md
crates/rktk-drivers-common/src/: debounce.rs  encoder.rs  lib.rs  panic_utils.rs  spi.rs
crates/rktk-drivers-common/src/display/: ssd1306.rs
crates/rktk-drivers-common/src/keyscan/: duplex_matrix.rs  flex_pin.rs  matrix.rs  mod.rs  pressed.rs  shift_register_matrix.rs
crates/rktk-drivers-common/src/magnetic/: matrix.rs  mod.rs  profile.rs  rapid_trigger.rs
crates/rktk-drivers-common/src/mouse/: mod.rs
crates/rktk-drivers-common/src/storage/: flash_sequential_map.rs  mod.rs
crates/rktk-drivers-common/src/trouble/: mod.rs
crates/rktk-drivers-common/src/usb/: builder.rs  driver.rs  handler.rs  mod.rs  raw_hid.rs  rrp.rs  task.rs
crates/rktk-drivers-nrf/: Cargo.toml
crates/rktk-drivers-nrf/src/: lib.rs  sdc.rs  system.rs  vbus.rs
crates/rktk-drivers-nrf/src/esb/: dongle.rs  reporter.rs
crates/rktk-drivers-nrf/src/keyscan/: flex_pin.rs  magnetic.rs  mod.rs
crates/rktk-drivers-nrf/src/rgb/: ws2812_pwm.rs
crates/rktk-drivers-nrf/src/softdevice/: flash.rs  mod.rs  vbus.rs
crates/rktk-drivers-nrf/src/split/: mod.rs  uart_full_duplex.rs  uart_half_duplex.rs
crates/rktk-drivers-rp/: Cargo.toml  README.md
crates/rktk-drivers-rp/src/: flash.rs  system.rs
crates/rktk-drivers-rp/src/rgb/: ws2812_pio.rs
crates/rktk-drivers-rp/src/split/: pio_half_duplex.rs
crates/rktk-drivers-rp2040/: Cargo.toml
crates/rktk-drivers-rp2040/src/: double_tap.rs  lib.rs  usb.rs
crates/rktk-drivers-rp2040/src/keyscan/: duplex_matrix.rs
crates/rktk-drivers-rp2040/src/mouse/: pmw3360.rs
crates/rktk-log/: Cargo.toml  README.md
crates/rktk-log/src/: lib.rs
crates/rktk-rrp/: Cargo.toml  README.md
crates/rktk-rrp/src/: client.rs  endpoints.rs  lib.rs  server.rs
crates/rktk-rrp/src/macros/: client.rs  mod.rs  server.rs
crates/rktk-rrp/src/tests/: mod.rs  test_server.rs
crates/rktk-rrp/src/transport/: read.rs  write.rs
crates/rktk/src/: constant.rs  dongle_task.rs  lib.rs  utils.rs
crates/rktk/src/config/: keymap.rs  mod.rs  rgb.rs
crates/rktk/src/drivers/: dummy.rs
crates/rktk/src/hooks/: mod.rs
crates/rktk/src/interface/: double_tap.rs  keyscan.rs  mod.rs  usb.rs
crates/rktk/src/keycode/: layer.rs  mod.rs  utils.rs
crates/rktk/src/task/: channels.rs  initializers.rs  mod.rs  (+4 more)
crates/xtask/: Cargo.toml
crates/xtask/res/: bin_size_stats.html
crates/xtask/src/: check.rs  config.rs  doc.rs  main.rs  publish.rs  stats.rs  stats_gen.rs  test.rs
examples/corne/: Cargo.toml  README.md  build.rs  rktk.json
examples/corne-nrf/: Cargo.toml  rktk.json
examples/corne-nrf/.cargo/: config.toml
examples/corne-nrf/src/: main.rs
examples/corne/src/: keymap.rs  main.rs
examples/dummy-kb/: Cargo.toml
examples/dummy-kb/.cargo/: config.toml
examples/dummy-kb/src/: keymap.rs  main.rs
keyboards/dummy-kb/: Cargo.toml
keyboards/dummy-kb/.cargo/: config.toml
keyboards/dummy-kb/src/: keymap.rs  main.rs
keyboards/keyball61-nrf52840/: Cargo.toml  Makefile.toml  build.bat  memory.x
keyboards/keyball61-nrf52840/.cargo/: config.toml
keyboards/keyball61-nrf52840/src/: display.rs  keymap.rs  main.rs  oled.rs
keyboards/keyball61-nrf52840/utils/: uf2families.json
keyboards/keyball61-rp2040/: Cargo.toml  Makefile.toml  README.md
keyboards/keyball61-rp2040/.cargo/: config.toml
keyboards/keyball61-rp2040/src/: keymap.rs  main.rs
lib/: .neoconf.json  Cargo.toml  rktk.example.toml
lib/.cargo/: config.toml
lib/rktk/: Cargo.toml  README.md  schema.json  wrangler.jsonc
lib/rktk-drivers-common/: Cargo.toml  README.md
lib/rktk-drivers-common/src/: debounce.rs  encoder.rs  lib.rs  panic_utils.rs  usb.rs
lib/rktk-drivers-nrf/: Cargo.toml  README.md
lib/rktk-drivers-nrf/src/: display.rs  lib.rs  mouse.rs  sdc.rs  system.rs  usb.rs
lib/rktk-drivers-nrf52/: Cargo.toml
lib/rktk-drivers-nrf52/src/: lib.rs  usb.rs
lib/rktk-drivers-rp/: Cargo.toml  README.md
lib/rktk-drivers-rp/src/: display.rs  double_tap.rs  flash.rs  lib.rs  mouse.rs  system.rs  usb.rs
lib/rktk-drivers-rp2040/: Cargo.toml
lib/rktk-drivers-rp2040/src/: double_tap.rs  flash.rs  lib.rs  usb.rs
lib/rktk-keymanager/: Cargo.toml  README.md
lib/rktk-keymanager/src/: config.rs  keymap.rs  lib.rs  macros.rs  time.rs
lib/rktk-log/: Cargo.toml  README.md
lib/rktk-log-macros/: Cargo.toml
lib/rktk-log-macros/src/: lib.rs
lib/rktk-log/src/: helper.rs  lib.rs  macros.rs
lib/rktk-rrp/: Cargo.toml  README.md
lib/rktk-rrp-client-webhid/: Cargo.toml
lib/rktk-rrp-client-webhid/src/: client.rs  lib.rs
lib/rktk-rrp-desktop/: Cargo.toml
lib/rktk-rrp-desktop/src/: main.rs
lib/rktk-rrp-hid/: Cargo.toml
lib/rktk-rrp-hid/src/: lib.rs  report.rs
lib/rktk-rrp/src/: client.rs  endpoints.rs  lib.rs  server.rs  shared.rs
lib/rktk/src/: config.rs  constant.rs  dongle_task.rs  hooks.rs  interface.rs  lib.rs  panicking.rs  utils.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs  utils.rs
xtask/src/commands/: build.rs  check.rs  mod.rs  ra_check.rs  test.rs
(+785 files in other folders)
