cargo-features = ["profile-rustflags"]

[workspace]
resolver = "3"
members = ["crates/*", "keyboards/*/crates/*"]
exclude = ["crates/.cargo"]

[workspace.package]
authors = ["nazo6"]
license = "MIT"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/nazo6/rktk"

[workspace.dependencies]
rktk-drivers-common = { path = "crates/rktk-drivers-common", version = "0.2.0" }
rktk-drivers-nrf = { path = "crates/rktk-drivers-nrf", version = "0.2.0" }
rktk-drivers-rp = { path = "crates/rktk-drivers-rp", version = "0.2.0" }
rktk = { path = "crates/rktk", version = "0.2.0" }
rktk-keymanager = { path = "crates/rktk-keymanager", version = "0.2.0" }
rktk-log = { path = "crates/rktk-log", version = "0.2.0" }
rktk-rrp = { path = "crates/rktk-rrp", version = "0.2.0" }

# embedded core libraries
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-storage-async = "0.4.1"

# embassy
embassy-embedded-hal = { version = "0.5.0" }
embassy-sync = { version = "0.7.0" }
embassy-executor = { version = "0.9.1" }
embassy-time = { version = "0.5.0" }
embassy-usb = { version = "0.5.0" }
embassy-futures = { version = "0.1.1" }
sequential-storage = "5.0.0"

embassy-rp = { version = "0.8.0" }
embassy-nrf = { version = "0.7.0" }
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice" }

# embedded architecture support
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"

# embedded hardware support
critical-section = "1.2.0"
portable-atomic = "1.11.0"
usbd-hid = "0.8.2"
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
ssd1306 = { version = "0.10.0", features = ["async"] }

trouble-host = { version = "0.3.0" }
rand_core = { version = "0.6.4" }

nrf-sdc = { version = "0.4.0", default-features = false }
nrf-mpsl = { version = "0.3.0", default-features = false }

pio = "0.3.0"

# embedded pattern
heapless = "0.7.0"
static_cell = "2.1.0"
fixed = "1.27.0"
fixed-macro = "1.2.0"

# logging
defmt = "1.0.1"
log = "0.4.25"

# rktk-config related
smart-default = "0.7.1"
const-gen = "1.6.5"
schemars = "1.0.0"


# common libraries
serde = { version = "1.0.207", default-features = false }
serde_json = "1.0.122"
serde_with = { version = "3.9.0", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
postcard = "1.0.8"
blinksy = { version = "0.5.0" }

paste = "1.0.15"
macro_rules_attribute = "0.2.0"

futures = { version = "0.3.30", default-features = false }
once_cell = { version = "1.21.3", default-features = false }

thiserror = { version = "2.0.3", default-features = false }
anyhow = "1.0.90"

strum = { version = "0.27.1", default-features = false }
itertools = { version = "0.14.0", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
atomic-pool = "2.0.0"

tokio = { version = "1.41.1" }

# rtkk-client related
web-sys = { version = "0.3.70" }
js-sys = { version = "0.3.77" }

wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
serde-wasm-bindgen = { version = "0.6.5" }

dioxus = { version = "0.7.0-alpha.2" }

tracing-log = { version = "0.2.0" }
jiff = { version = "0.2.1" }
kle-serial = { version = "0.3.1" }

smol = { version = "2.0.2" }
async-hid = { version = "0.4.0" }
async-channel = "2.3.1"

# xtask
clap = { version = "4.5.20", features = ["derive"] }
duct = "1.0.0"
colored = "3.0.0"
cargo_metadata = "0.21.0"
dircpy = { version = "0.3.19", default-features = false }
sha2 = "0.10.8"
hex = "0.4.3"

# meta
document-features = "0.2.11"
pretty_assertions = "1.4.1"

[patch.crates-io]
bbq2 = { git = "https://github.com/jamesmunns/bbq2", tag = "bbq2/0.1.0" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc/" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc/" }
