cargo-features = ["profile-rustflags"]

[workspace]
resolver = "3"
members = ["crates/*", "keyboards/*/crates/*"]
exclude = ["crates/.cargo"]

[workspace.package]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/nazo6/rktk"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.90"
async-channel = "2.3.1"
async-hid = { version = "0.4.0" }
atomic-pool = "2.0.0"
bitvec = { version = "1.0.1", default-features = false }
blinksy = { version = "0.11.0" }
cargo_metadata = "0.23.0"
cfg-if = "1.0.4"
clap = { version = "4.5.20", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.2.2"
const-gen = "1.6.5"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
critical-section = "1.2.0"
defmt = "1.0.1"
dialoguer = "0.12.0"
dioxus = { version = "0.7.0" }
dircpy = { version = "0.3.19", default-features = false }
dirs = "6.0.0"
display-interface = "0.5.0"
document-features = "0.2.11"
duct = "1.0.0"
embassy-embedded-hal = { version = "0.5.0" }
embassy-executor = { version = "0.9.1" }
embassy-futures = { version = "0.1.1" }
embassy-nrf = { version = "0.9.0" }
embassy-rp = { version = "0.9.0" }
embassy-sync = { version = "0.7.0" }
embassy-time = { version = "0.5.0" }
embassy-usb = { version = "0.5.0" }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-storage-async = "0.4.1"
fixed = "1.27.0"
fixed-macro = "1.2.0"
futures = { version = "0.3.30", default-features = false }
heapless = "0.9.1"
human_bytes = { version = "0.4.3" }
itertools = { version = "0.14.0", default-features = false }
jiff = { version = "0.2.1" }
js-sys = { version = "0.3.77" }
kle-serial = { version = "0.3.1" }
kmsm = { path = "crates/kmsm", version = "0.2.0" }
kmsm-rktk = { path = "crates/kmsm-rktk", version = "0.2.0" }
log = "0.4.25"
macro_rules_attribute = "0.2.0"
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "8ac007cbd4556e1123bee2479d66272ddf355844", default-features = false }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "8ac007cbd4556e1123bee2479d66272ddf355844", default-features = false }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "5949a5b1445cc907745c6449a35577e4544cd255" }
paste = "1.0.15"
pio = "0.3.0"
portable-atomic = "1.11.0"
postcard = { git = "https://github.com/jamesmunns/postcard", rev = "07b436d972fc92c21e7e310cc12b334ef0be6a44", features = [
  "heapless-v0_9",
] }
pretty_assertions = "1.4.1"
rand_core = { version = "0.6.4" }
regex = "1.12.2"
rktk = { path = "crates/rktk", version = "0.2.0" }
rktk-drivers-common = { path = "crates/rktk-drivers-common", version = "0.2.0" }
rktk-drivers-nrf = { path = "crates/rktk-drivers-nrf", version = "0.2.0" }
rktk-drivers-rp = { path = "crates/rktk-drivers-rp", version = "0.2.0" }
rktk-log = { path = "crates/rktk-log", version = "0.2.0" }
rktk-rrp = { path = "crates/rktk-rrp", version = "0.2.0" }
rusb = "0.9.4"
schemars = "1.0.0"
sequential-storage = "7.1.0"
serde = { version = "1.0.207", default-features = false }
serde_json = "1.0.122"
serde-wasm-bindgen = { version = "0.6.5" }
serde_with = { version = "3.9.0", default-features = false }
# This is pinned because of serialport/serialport-rs#300
serialport = "=4.7.3"
smart-default = "0.7.1"
smol = { version = "2.0.2" }
ssd1306 = { version = "0.10.0", features = ["async"] }
ssmarshal = { version = "1.0.0", default-features = false }
static_cell = "2.1.0"
strum = { version = "0.27.1", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
tokio = { version = "1.41.1" }
tracing-log = { version = "0.2.0" }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "e658d7e1a6d669788d3cd8e23f3d078e55952772" }
usbd-hid = "0.8.2"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.70" }
