[package]
name = "xtask"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.90"
duct = "0.13.7"
colored = "2.1.0"
cargo_metadata = "0.18.1"
tempfile = "3.13.0"
toml = "0.8.19"
serde = { workspace = true }
