[package]
name = "kmsm-rktk"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
kmsm = { workspace = true }
strum = { workspace = true, features = ["derive"] }
paste = { workspace = true }

[features]
_check = []
