[package]
name = "kmsm-rktk"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
kmsm = { workspace = true }
paste = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[features]
_check = []
