[package]
name = "rktk-client"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
rktk = { workspace = true }
ssmarshal = { workspace = true, features = ["std"] }
rktk-rrp = { workspace = true, features = ["client"] }
rktk-keymanager = { workspace = true }

dioxus = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
strum = { workspace = true }
jiff = { workspace = true }

log = { workspace = true }
tracing-log = { workspace = true, features = ["log-tracer"] }

kle-serial = { workspace = true }

# web deps
web-sys = { workspace = true, optional = true, features = [
  "Navigator",
  "Window",
  "ResizeObserver",
  "Hid",
  "HidCollectionInfo",
  "HidConnectionEvent",
  "HidConnectionEventInit",
  "HidDevice",
  "HidDeviceFilter",
  "HidDeviceRequestOptions",
  "HidInputReportEvent",
  "HidInputReportEventInit",
  "HidReportInfo",
  "HidReportItem",
  "HiddenPluginEventInit",
  "HidUnitSystem",
] }
js-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
async-channel = { workspace = true }

# native deps
smol = { workspace = true, optional = true }
async-hid = { workspace = true, optional = true }

[features]
_check = ["web"]

web = [
  "dioxus/web",
  "dep:web-sys",
  "dep:js-sys",
  "dep:wasm-bindgen-futures",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "jiff/js",
]
native = ["dioxus/desktop", "dep:smol", "dep:async-hid"]
