[package]
name = "rktk-client"
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
kmsm = { workspace = true }
kmsm-rktk = { workspace = true }
rktk-rrp = { workspace = true, features = ["client"] }

dioxus = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
ssmarshal = { workspace = true, features = ["std"] }
anyhow = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
strum = { workspace = true }
jiff = { workspace = true }
cfg-if = { workspace = true }

log = { workspace = true }
tracing-log = { workspace = true, features = ["log-tracer"] }

kle-serial = { workspace = true }

# web deps
web-sys = { workspace = true, optional = true, features = [
  "Navigator",
  "Window",
  "ResizeObserver",
  "Hid",
  "HidCollectionInfo",
  "HidConnectionEvent",
  "HidConnectionEventInit",
  "HidDevice",
  "HidDeviceFilter",
  "HidDeviceRequestOptions",
  "HidInputReportEvent",
  "HidInputReportEventInit",
  "HidReportInfo",
  "HidReportItem",
  "HiddenPluginEventInit",
  "HidUnitSystem",
] }
js-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
async-channel = { workspace = true }

# native deps
smol = { workspace = true, optional = true }
async-hid = { workspace = true, optional = true }

[features]
_check = ["web", "native"]

web = [
  "dioxus/web",
  "dep:web-sys",
  "dep:js-sys",
  "dep:wasm-bindgen-futures",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "jiff/js",
]
native = ["dioxus/desktop", "dep:smol", "dep:async-hid"]
