[package]
name = "rktk-client"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-hid = { workspace = true, optional = true }
cfg-if = { workspace = true }
dioxus = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
jiff = { workspace = true }
js-sys = { workspace = true, optional = true }
kle-serial = { workspace = true }
kmsm = { workspace = true }
kmsm-rktk = { workspace = true }
log = { workspace = true }
rktk-rrp = { workspace = true, features = ["client"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
ssmarshal = { workspace = true, features = ["std"] }
strum = { workspace = true }
tracing-log = { workspace = true, features = ["log-tracer"] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
  "Hid",
  "HidCollectionInfo",
  "HidConnectionEvent",
  "HidConnectionEventInit",
  "HidDevice",
  "HidDeviceFilter",
  "HidDeviceRequestOptions",
  "HidInputReportEvent",
  "HidInputReportEventInit",
  "HidReportInfo",
  "HidReportItem",
  "HidUnitSystem",
  "HiddenPluginEventInit",
  "Navigator",
  "ResizeObserver",
  "Window",
], optional = true }

[features]
_check = ["native", "web"]
native = ["dep:async-hid", "dep:smol", "dioxus/desktop"]
web = [
  "dep:js-sys",
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
  "dioxus/web",
  "jiff/js",
]
