[package]
name = "rktk-defmt-print"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Small convenient defmt-print wrapper for rktk keyboards"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
rusb = { workspace = true }
serialport = { workspace = true }

[features]
_check = []
