cargo-features = ["per-package-target"]

[package]
name = "rktk-drivers-nrf"
version.workspace = true
edition.workspace = true
description = "rktk drivers for nrf chip"
repository.workspace = true
license.workspace = true
# tombi: lint.rules.key-not-allowed.disabled = true
forced-target = "thumbv7em-none-eabihf"

[package.metadata.docs.rs]
features = ["_release_check"]
default-target = "thumbv7em-none-eabihf"

[lib]
bench = false
doctest = false
path = "src/lib.rs"
test = false

[dependencies]
atomic-pool = { workspace = true }
bitvec = { workspace = true, default-features = false }
cortex-m = { workspace = true }
defmt = { workspace = true, optional = true }
document-features = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-nrf = { workspace = true, features = ["gpiote", "time-driver-rtc1"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage-async = { workspace = true }
esb-ng = { git = "https://github.com/nazo6/esb", optional = true }
heapless = { workspace = true }
log = { workspace = true, optional = true }
nrf-mpsl = { workspace = true, default-features = false, features = [
  "critical-section-impl",
], optional = true }
# after this revision, unreleased breaking change of embassy-nrf is included
nrf-sdc = { workspace = true, default-features = false, features = [
  "central",
  "peripheral",
], optional = true }
nrf-softdevice = { workspace = true, features = [
  "ble-central",
  "ble-l2cap",
  "ble-peripheral",
], optional = true }
postcard = { workspace = true, optional = true }
rktk = { workspace = true }
rktk-drivers-common = { workspace = true, features = ["usb-remote-wakeup"] }
rktk-log = { workspace = true }
sequential-storage = { workspace = true }
serde = { workspace = true, optional = true }
ssmarshal = { workspace = true }
static_cell = { workspace = true }
usbd-hid = { workspace = true }

[features]
default = ["power"]
_check = ["_nrfxx", "defmt", "esb", "sdc", "softdevice-ble"]
_nrfxx = [
  "embassy-nrf/nrf52840",
  "esb-ng?/nrf52840",
  "nrf-sdc?/nrf52840",
  "nrf-softdevice?/nrf52840",
  "nrf-softdevice?/s140"
]
_release_check = ["_nrfxx", "defmt", "esb"]
#! #### Logging
## Enables defmt logging
defmt = [
  "dep:defmt",
  "embassy-nrf/defmt",
  "heapless/defmt",
  "nrf-mpsl?/defmt",
  "nrf-sdc?/defmt",
  "nrf-softdevice?/defmt",
  "postcard?/use-defmt",
  "rktk-drivers-common/defmt",
  "rktk-log/defmt",
  "rktk/defmt",
]
## Enables wireless dongle driver using esb(Enhanced Shockburst) protocol.
## This feature is not compatible with softdevice.
esb = ["dep:esb-ng", "dep:postcard", "embassy-nrf/unstable-pac"]
## Enables log logging
log = ["dep:log"]
## Enables system power off feature. This is supported only on some chips like nRF52840.
power = []
sdc = ["dep:nrf-mpsl", "dep:nrf-sdc"]
#! #### Softdevice
## Enables softdevice. If this feature is enabled, the softdevice will be included in the build.
softdevice = ["dep:nrf-softdevice"]
## Enables BLE split and reporter driver using softdevice
softdevice-ble = [
  "dep:postcard",
  "dep:serde",
  "nrf-softdevice/ble-central",
  "nrf-softdevice/ble-gatt-server",
  "nrf-softdevice/ble-peripheral",
  "nrf-softdevice/ble-sec",
  "softdevice",
]
