[package]
name = "rktk-drivers-rp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "rktk drivers for RP chip"
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
features = ["embassy-rp/rp2040"]

[dependencies]
defmt = { workspace = true, optional = true }
display-interface = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true, features = [
  "critical-section-impl",
  "time-driver",
] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embedded-storage-async = { workspace = true }
fixed = { workspace = true }
fixed-macro = { workspace = true }
log = { workspace = true, optional = true }
pio = { workspace = true }
rktk = { workspace = true }
rktk-drivers-common = { workspace = true }
rktk-log = { workspace = true }
ssd1306 = { workspace = true }
static_cell = { workspace = true }

[features]
_check = ["embassy-rp/rp2040"]
defmt = [
  "dep:defmt",
  "rktk-drivers-common/defmt",
  "rktk-log/defmt",
  "rktk/defmt",
]
log = ["dep:log"]
