[package]
name = "rktk-log"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "rktk log management"
repository.workspace = true
license.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }

[features]
_check = ["defmt", "log"]
defmt = ["dep:defmt"]
log = []
