[package]
name = "rktk-rrp"
version.workspace = true
edition.workspace = true
description = "rrp - RKTK Remote Protocol"
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-io-async = { workspace = true, optional = true }
futures = { workspace = true }
heapless = { workspace = true, optional = true }
kmsm = { workspace = true, features = ["postcard"] }
macro_rules_attribute = { workspace = true }
postcard = { workspace = true, features = ["experimental-derive"] }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt"] }

[features]
default = []
_check = ["client", "server"]
client = ["std"]
server = ["dep:embedded-io-async", "dep:heapless"]
std = ["futures/std", "postcard/use-std"]
