[package]
name = "xtask"
description = "Internal xtask command for rktk"
publish = false
authors.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
duct = { workspace = true }
colored = { workspace = true }
cargo_metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dircpy = { workspace = true, default-features = false }
human_bytes = { workspace = true }

[features]
_check = []
