[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Internal xtask command for rktk"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
dircpy = { workspace = true, default-features = false }
duct = { workspace = true }
human_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
_check = []
